# DroneSpiderApp

./: CMakeLists.txt  vcpkg.json
Client/: CMakeLists.txt  ConnectionWindow.cpp  ConnectionWindow.hpp  ConnectionWindowUi.cpp  ConnectionWindowUi.hpp  Logger.cpp  Logger.hpp  LoginPanel.cpp  LoginPanel.hpp  LoginPanelUi.cpp  LoginPanelUi.hpp  MoveRequestInputWindow.cpp  MoveRequestInputWindow.hpp  MoveRequestInputWindowUi.cpp  MoveRequestInputWindowUi.hpp  RotateRequestInputWindow.cpp  RotateRequestInputWindow.hpp  RotateRequestInputWindowUi.cpp  RotateRequestInputWindowUi.hpp  TcpUdpQtApp.cpp  TcpUdpQtApp.hpp  TcpUdpQtAppUi.hpp  UserConnectionProxy.cpp  UserConnectionProxy.hpp  UserPanel.cpp  UserPanel.hpp  UserPanelUi.cpp  UserPanelUi.hpp  main.cpp
Client/ClientNetwork/: CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  UdpClient.cpp  UdpClient.hpp
Server/: AdminConnectionProxy.cpp  AdminConnectionProxy.hpp  AdminInstance.cpp  AdminInstance.hpp  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.hpp  DroneConnectionProxy.cpp  DroneConnectionProxy.hpp  DroneConnectionStub.cpp  DroneConnectionStub.hpp  DroneInstance.cpp  DroneInstance.hpp  InstanceCreator.cpp  InstanceCreator.hpp  ListeningConnection.cpp  ListeningConnection.hpp  ServerApp.cpp  ServerApp.hpp  UserIdProvider.cpp  UserIdProvider.hpp  main.cpp
Server/ServerNetwork/: CMakeLists.txt  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp
Utilities/: CMakeLists.txt  Deserializer.cpp  Deserializer.hpp  Message.cpp  Message.hpp  Serializer.cpp  Serializer.hpp  UnitContext.hpp
